
Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.3 - November ??, 2011

    Updated the Logtalk compiler to add information about a source file name,
    source file directory, and source file compiler options to the generated
    Prolog files. In previous versions, this information was registered only
    when loading a source file. The changes simplify building applications
    where Logtalk libraries is pre-compiled and pre-loaded.

    Updated the Logtalk compiler to print the name of the hook object used in
    the compilation of source files when the "hook" compiler flag is defined.

    Updated the built-in debugger in order to avoid unnecessary choice points
    created by back-end Prolog compilers whose retract/1 implementation fails
    to take advantage of logical update semantics to make calls deterministic.

    Corrected a bug in the Logtalk compiler runtime handler where it failed
    to decompile internal entity identifiers when throwing entity existence
    exceptions.

    Updated the Lean Prolog config file, adding index/1 directives for some
    of the dynamic predicates used by the internal Logtalk runtime tables.

    Updated the SWI-Prolog integration files to test for the availability
    of the index/1 directive, which is deprecated by the new experimental
    SWI-Prolog support for just-in-time multi-argument indexing.

    Added a predicate subsequence/4 for generating subsequences of a list
    with a given length to the library "listp" and "list" entities.

    Corrected some silly bugs in the definition of the "character" library
    object predicates is_bin_digit/1, is_octal_digit/1, is_dec_digit/1, and
    is_hex_digit/1.

